--- a/app/assets/stylesheets/components/splash.css
+++ b/app/assets/stylesheets/components/splash.css
@@ -1,15 +1,19 @@
 /* NAVIGATION BAR AT TOP */
 .splash-nav {
     display: flex;
+    position: fixed;
     justify-content: space-between;
     align-items: center;
-    background-color: #611f69;
+    background-color: #3d1640;
     color: #f4ede4;
     text-decoration: none;
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 50px;
     padding-right: 50px;
+    top: 0;
+    z-index: 2;
+    width: 100%;
 }
 
 .nav-left a, .nav-right a {
@@ -53,25 +57,26 @@
 }
 
 .nav-signup, .nav-signup a, .nav-logout {
-    border: 1px solid #611f69;
-    background-color: #f4ede4;
-    color: #611f69;
-    border-radius: 4px;
-}
-
-.nav-signup:hover{
-    background-color: #e0d8cd;
-}
-
-.nav-demologin {
     border: 1px solid #f4ede4;
-    background-color: #611f69;
+    background-color: #3d1640;
     color: #f4ede4;
     border-radius: 4px;
 }
 
-.nav-demologin:hover {
+.nav-signup:hover{
     box-shadow: inset 0 0 0 1px #f4ede4
+}
+
+.nav-demologin {
+    border: 1px solid #611f69;
+    background-color: white;
+    color: #611f69;
+    border-radius: 4px;
+    margin-right: 100px;
+}
+
+.nav-demologin:hover {
+    background-color: #f7f3ee;
 }
 /* LOGIN/SIGNUP FORMS */
 
@@ -144,4 +149,111 @@
 
 .form-button:hover {
     background-color: #67456b;
+}
+
+/* SPLASH BODY */
+
+/* SPLASH 1 */
+.splash-body-1 {
+    display: flex;
+    height: 430px;
+    background-color: #611f69;
+    padding-top: 160px;
+}
+
+.splash-body-1-left {
+    width: 35%;
+    max-width: 500px;
+    margin-left: 70px;
+}
+
+#sb1l-mySlack {
+    font-size: 50px;
+    font-weight: bold;
+    color: white;
+    transform: scaleY(1.1);
+    padding-bottom: 20px;
+}
+
+#sb1l-digital {
+    font-size: 50px;
+    font-weight: bold;
+    color: #ecb22e;
+    transform: scaleY(1.1);
+    padding-bottom: 30px;
+}
+
+#sb1l-paragraph {
+    color: white;
+    font-size: 18px;
+    line-height: 1.3;
+}
+
+#sb1l-button {
+    border: 1px solid #611f69;
+    background-color: white;
+    color: #611f69;
+    border-radius: 4px;
+    cursor: pointer;
+    padding: 15px 30px 15px 30px;
+    margin-top: 30px;
+    font-weight: bold;
+}
+
+#sb1l-button:hover {
+    background-color: #f7f3ee;
+}
+
+/* SPLASH 2 */
+.splash-body-2 {
+    margin-top: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 80px;
+}
+
+#sb2-header {
+    font-size: 40px;
+    font-weight: bold;
+    margin-bottom: 40px;
+    transform: scaleY(1.1)
+}
+
+.mySlack-stats {
+    display: flex;
+    justify-content: space-around;
+    margin-right: 0;
+}
+
+#stat-1, #stat-2, #stat-3 {
+    width: 21%;
+}
+
+#stat-2, #stat-3 {
+    padding-left: 8%;
+}
+#stat-1 p, #stat-2 p, #stat-3 p {
+    margin-top: 10px;
+    line-height: 1.3;
+}
+
+.mySlack-stats span {
+    font-size: 50px;
+    font-weight: bold;
+    color: #611f69;
+    transform: scaleY(1.5)
+}
+
+/* FOOTER */
+.splash-footer {
+    background-color: #f4ede4;
+    display: flex;
+    height: 100px;
+    align-items: center;
+}
+
+.splash-footer-left {
+    margin-left: 70px;
+    
 }
