refactor chat room container

--- a/app/assets/stylesheets/base/colors.scss
+++ b/app/assets/stylesheets/base/colors.scss
@@ -1,10 +1,10 @@
-$dark-purple: #3d1640;
-// $light-purple: ;
-// $grey-purple: ;
-// $border-purple: ;
+$dark-purple: #37133a;
+$light-purple: #611f69;
+$grey-purple: #654166;
+$border-purple: #513452;
 
 // $dark-beige: ;
-// $light-beige: ;
+$light-beige: #f4ede4;
 
 // $yellow: ;
 
