--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,11 +10,17 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
  *= require_self
  */
-
+ 
  @import 'base/reset.css';
-
  @import 'base/colors.scss';
+ 
+ 
  @import 'components/_splash.scss';
+ @import 'components/_header.scss';
+ @import 'components/_side_nav.scss';
+
+
+ 
+//  *= require_tree .
