complete basic live chat set up

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,7 @@
  @import 'components/_splash.scss';
  @import 'components/_header.scss';
  @import 'components/_side_nav.scss';
+ @import 'components/*';
 
 
  
