--- a/app/assets/stylesheets/components/_side_nav.scss
+++ b/app/assets/stylesheets/components/_side_nav.scss
@@ -4,4 +4,7 @@
     background-color: #4a154b;
     padding-top: 45px;
     color: antiquewhite;
+    // margin-right: 0;
+    position: absolute;
+    overflow-y: auto;
 }
