--- a/app/assets/stylesheets/components/_side_nav.scss
+++ b/app/assets/stylesheets/components/_side_nav.scss
@@ -2,9 +2,81 @@
     width: 260px;
     height: 100vh;
     background-color: #4a154b;
-    padding-top: 45px;
-    color: antiquewhite;
+    padding-top: 38px;
+    color: rgb(253, 248, 242);
     // margin-right: 0;
     position: absolute;
     overflow-y: auto;
+}
+
+.workspace-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 6vh;
+    border: .5px solid $border-purple;
+    padding-left: 5%;
+    padding-right: 5%;
+    color: white;
+    font-weight: bold;
+
+    button {
+        background-color: white;
+        color: $light-purple;
+        border: none;
+        border-radius: 100%;
+        height: 4vh;
+        width: 4vh;
+    }
+}
+
+.channel-message-container {
+    padding-top: 5%;
+    color: lightgray;
+    font-size: smaller;
+}
+
+.channel-header-container, .dm-message-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 5%;
+    padding-right: 5%;
+ 
+    height: 4vh;
+    button {
+        display: none;
+        color: lightgray;
+        background-color: transparent;
+        border: none;
+        font-size: large;
+        height: 4vh;
+        width: 4vh;
+    }
+}
+
+.channel-header-container:hover, .dm-message-container:hover {
+    button {
+        display: inline;
+        &:hover {
+            background-color: $grey-purple; 
+            border-radius: 6px;
+        }
+    }
+}
+
+.chat-li {
+    padding-top: 2%;
+    padding-bottom: 2%;
+    padding-left: 5%;
+    &:hover {
+        background-color: $dark-purple;
+    }
+}
+.chat-index-item {
+    color: lightgray;
+    text-decoration: none;
+    span {
+        padding: 5%;
+    }
 }
