add create chat modal

--- a/app/assets/stylesheets/components/_side_nav.scss
+++ b/app/assets/stylesheets/components/_side_nav.scss
@@ -73,6 +73,11 @@
         background-color: $dark-purple;
     }
 }
+#add-chat {
+    padding: 5%;
+    // background-color: $grey-purple;
+
+}
 .chat-index-item {
     color: lightgray;
     text-decoration: none;
