--- a/app/assets/stylesheets/components/_new_channel_form.scss
+++ b/app/assets/stylesheets/components/_new_channel_form.scss
@@ -13,7 +13,7 @@
     background-color: white;
     top: 50%;
     left: 50%;
-    height: 60vh;
+    height: 50vh;
     min-height: 300px;
     width: 20vw;
     min-width: 400px;
@@ -33,17 +33,68 @@
       font-weight: bold;
       transform: scaleY(1.1);
     }
+    button {
+      color: gray;
+      background-color: transparent;
+      // padding: 2%;
+      height: 2rem;
+      width: 2rem;
+      border: none;
+      border-radius: 6px;
+      &:hover {
+        background-color: rgb(240, 240, 240);
+      }
+    }
   }
 
   .new-channel-container {
+    padding: 2%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
     h2 {
       color: grey;
       font-size: small;
       line-height: 1.6;
-      padding-bottom: 6%;
+      // padding-bottom: 6%;
     }
-    label {
+    .chat-errors {
+      font-size: x-small;
+      color: red;
+    }
+    .form-label {
       font-size: small;
       font-weight: bold;
+      color: black;
+      width: 100%;
+    }
+    .form-input {
+      width: 100%;
+      height: 2rem;
+      margin-top: 2%;
+      // margin-bottom: 4%;
+    }
+    .private-label {
+      font-size: small;
+    }
+    .private-details {
+      display: flex;
+      justify-content: space-between;
+    }
+    #private-checkbox {
+      width: 20%;
+      height: 1.5rem;
+    }
+    .submit {
+      height: 2rem;
+      background-color: green;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      &:hover {
+        background-color: rgb(3, 148, 3);
+        box-shadow: 1px 1px 10px grey;
+      }
     }
   }
