--- a/app/assets/stylesheets/components/_side_nav.scss
+++ b/app/assets/stylesheets/components/_side_nav.scss
@@ -27,6 +27,7 @@
         border-radius: 100%;
         height: 4vh;
         width: 4vh;
+        cursor: pointer;
     }
 }
 
@@ -52,6 +53,10 @@
         font-size: large;
         height: 4vh;
         width: 4vh;
+        cursor: pointer;
+    }
+    span {
+        padding-left: 5px;
     }
 }
 
@@ -65,6 +70,9 @@
     }
 }
 
+.hidden {
+    display: none;
+}
 .chat-li {
     padding-top: 2%;
     padding-bottom: 2%;
