--- a/app/assets/stylesheets/components/_chat_room.scss
+++ b/app/assets/stylesheets/components/_chat_room.scss
@@ -1,98 +1,7 @@
-// .chatroom-container {
-//     // border: 1px solid black;
-//     margin-left: 260px;
-//     padding-top: 38px;
-//     height: 100vh;
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: flex-end;
-// }
+.full-content-container {
+    display: flex;
+}
 
-
-// .message-list {
-//     overflow-y: auto;
-//     margin-bottom: 5%;
-// }
-
-// .message-item-container {
-//     padding-left: 2%;
-//     padding-bottom: .5%;
-//     padding-top: .5%;
-//     display: flex;
-//     align-items: flex-start;
-
-//     &:hover {
-//         background-color: rgba(247, 247, 247, 0.986) ;
-//     }
-// }
-
-// .message-details-container {
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: flex-start;
-//     align-items: flex-start;
-//     padding-left: 1%;
-//     width: 100%;
-// }
-
-// .message-header {
-//     display: flex;
-//     align-items: center;
-//     padding-bottom: 5px;
-//     // background-color: yellow;
-// }
-
-// #message-username {
-//     font-weight: bold;
-//     font-size: 15px;
-//     padding: 0% 1% ;
-// }
-
-// #message-time {
-//     font-size: 10px;
-//     color: gray;
-//     // margin-top: .5%;
-//     margin-left: 5%;
-// }
-
-// .message-content {
-//     font-size: 14px;
-//     line-height: 1.5;
-//     margin-right: 1%;
-//     // background-color: red;
-// }
-// .user-icon {
-//     color: white;
-//     background-color: black;
-//     border: 1px solid black;
-//     height: 30px;
-//     width: 30px;
-// }
-
-
-
-// // MESSAGE INPUT 
-
-// .message-submit-container {
-//     position: fixed;
-//     padding-bottom: 2%;
-//     width:80%;
-//     // background-color: blue;
-// }
-
-// .message-form {
-//     border: 1px solid lightgray;
-//     display: flex;
-//     justify-content: space-between;
-//     margin: 0% 5% 2% 1%;
-//     // padding: 2%;
-//     ::placeholder {
-//         color: lightgray;
-//     }
-// }
-
-// .message-input {
-//     width: 100%;
-//     padding: 1%;
-//     height: 20px;
-// }
+.chatroom-container {
+    margin-top: 38px;
+}
