--- a/app/assets/stylesheets/components/_chat_room.scss
+++ b/app/assets/stylesheets/components/_chat_room.scss
@@ -6,7 +6,7 @@
 .chatroom-container {
     // margin-top: 38px;
     // margin-bottom: 38px;
-    margin-left: 2%;
+    // margin-left: 2%;
     width: 100%;
     // height: 100%;
     display: flex;
