--- a/app/assets/stylesheets/components/_chat_room.scss
+++ b/app/assets/stylesheets/components/_chat_room.scss
@@ -26,7 +26,13 @@
         background-color: transparent;
         color: lightgray;
         border: none;
+        margin-bottom: 1%;
+        &:hover {
+            color: gray;
+        }
     }
+    display: flex;
+    align-items: center;
 }
 
 .message-input {
