--- a/app/assets/stylesheets/components/_chat_room.scss
+++ b/app/assets/stylesheets/components/_chat_room.scss
@@ -219,7 +219,7 @@
         border-radius: 4px;
         cursor: pointer;
         &:hover {
-            background-color: rgb(202, 202, 202);
+            background-color: $light-beige;
         }
     }
 }
